View Issue Details

IDProjectCategoryView StatusLast Update
0026844Open CASCADEOCCT:Visualizationpublic2016-04-20 15:51
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version6.9.1 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026844: Visualization, OpenGl_Flipper - fix issues within Core Profile and OpenGL ES
DescriptionCurrent code of OpenGl_Flipper contains outdated lines which cause errors within Core Profile and entirely disable functionality within OpenGL ES:
 void OpenGl_Flipper::Render (const Handle(OpenGl_Workspace)& theWorkspace) const
 {
   // Check if rendering is to be in immediate mode
   const Handle(OpenGl_Context)& aContext = theWorkspace->GetGlContext();

 #if !defined(GL_ES_VERSION_2_0)
   GLint aCurrMode = GL_MODELVIEW;
   glGetIntegerv (GL_MATRIX_MODE, &aCurrMode);
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0024381 closedbugmaster Visualization, TKOpenGl - revise matrices stack and usage of temporary matrices 
child of 0024838 closedbugmaster Visualization, TKOpenGl - make general rendering path compatible with OpenGL 3.1+ core profiles 

Activities

git

2015-11-05 11:49

administrator   ~0047799

Branch CR26844 has been created by kgv.

SHA-1: c91e02663292cb60b2f1abedba56f97a93835ea1


Detailed log of new commits:

Author: kgv
Date: Thu Nov 5 11:49:30 2015 +0300

    0026844: Visualization, OpenGl_Flipper - fix issues within Core Profile and OpenGL ES
    
    Remove outdated code lines.

kgv

2015-11-05 11:52

developer   ~0047800

Please check compilation, testing is not needed.

mkv

2015-11-05 14:24

tester   ~0047823

Dear BugMaster,
Branch CR26844 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode.
SHA-1: c91e02663292cb60b2f1abedba56f97a93835ea1

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 145 (146 on master)

products component :
Linux: 39 (39 on master)
Windows: 0 (0 on master)

mkv

2015-11-05 14:24

tester   ~0047824

Dear BugMaster,
Branch CR26844 is TESTED.

git

2016-04-17 14:26

administrator   ~0053177

Branch CR26844 has been deleted by kgv.

SHA-1: c91e02663292cb60b2f1abedba56f97a93835ea1

Related Changesets

occt: master 8265e5de

2015-11-05 08:49:30

kgv


Committer: bugmaster Details Diff
0026844: Visualization, OpenGl_Flipper - fix issues within Core Profile and OpenGL ES

Remove outdated code lines.
Affected Issues
0026844
mod - src/OpenGl/OpenGl_Flipper.cxx Diff File

Issue History

Date Modified Username Field Change
2015-11-05 11:47 kgv New Issue
2015-11-05 11:47 kgv Assigned To => kgv
2015-11-05 11:49 git Note Added: 0047799
2015-11-05 11:50 kgv Relationship added related to 0024381
2015-11-05 11:51 kgv Relationship added child of 0024838
2015-11-05 11:52 kgv Note Added: 0047800
2015-11-05 11:52 kgv Assigned To kgv => bugmaster
2015-11-05 11:52 kgv Severity minor => trivial
2015-11-05 11:52 kgv Status new => resolved
2015-11-05 11:52 kgv Status resolved => reviewed
2015-11-05 12:35 mkv Assigned To bugmaster => mkv
2015-11-05 12:37 mkv Test case number => Not needed
2015-11-05 14:24 mkv Note Added: 0047823
2015-11-05 14:24 mkv Note Added: 0047824
2015-11-05 14:24 mkv Assigned To mkv => bugmaster
2015-11-05 14:24 mkv Status reviewed => tested
2015-11-06 12:35 bugmaster Changeset attached => occt master 8265e5de
2015-11-06 12:35 bugmaster Status tested => verified
2015-11-06 12:35 bugmaster Resolution open => fixed
2016-04-17 14:26 git Note Added: 0053177
2016-04-20 15:42 aiv Fixed in Version => 7.0.0
2016-04-20 15:51 aiv Status verified => closed