0026844: Visualization, OpenGl_Flipper - fix issues within Core Profile and OpenGL ES

Remove outdated code lines.